assign3/assignment3/initial/src/main/CSlang/parser/.antlr/CSlangParser.py
# Generated from e:/hocbaidcm/PPL/assignment/assign3/assignment3/initial/src/main/CSlang/parser/CSlang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CSlangParser ( Parser ):

    grammarFileName = "CSlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@readInt'", "'@writeInt'", "'@readFloat'", 
                     "'@writeFloat'", "'@readBool'", "'@writeBool'", "'@readString'", 
                     "'@writeString'", "<INVALID>", "<INVALID>", "'break'", 
                     "'continue'", "'if'", "'else'", "'for'", "'true'", 
                     "'false'", "'int'", "'float'", "'bool'", "'string'", 
                     "'return'", "'null'", "'class'", "'constructor'", "'var'", 
                     "'self'", "'new'", "'void'", "'const'", "'func'", "'!'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'='", "':='", "'+'", "'-'", "'*'", "'\\'", 
                     "'%'", "'/'", "'<-'", "'^'", "'.'", "','", "';'", "':'", 
                     "')'", "'('", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BLOCK_COMMENT", "LINE_COMMENT", "BREAK", 
                      "CONTINUE", "IF", "ELSE", "FOR", "TRUE", "FALSE", 
                      "INT", "FLOAT", "BOOL", "STRING", "RETURN", "NULL", 
                      "CLASS", "CONSTRUCTOR", "VAR", "SELF", "NEW", "VOID", 
                      "CONST", "FUNC", "NOT", "AND", "OR", "EQUAL", "NOT_EQUAL", 
                      "LESS", "GREATER", "LESS_EQUAL", "GREATER_EQUAL", 
                      "INITIAL", "ASSIGN", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE_I", "DIVIDE_I_L", "DIVIDE_F", "SUPER_CLASS", 
                      "STRING_CONCAT", "DOT", "COMMA", "SEMICOLON", "COLON", 
                      "RPAREN", "LPAREN", "LBRACK", "RBRACK", "LBRASE", 
                      "RBRASE", "AT_ID", "STRING_LITERAL", "ID", "FLOAT_LITERAL", 
                      "NON_ZERO_INT", "INT_LITERAL", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_dcl = 1
    RULE_class_body = 2
    RULE_method_dcl = 3
    RULE_constructor_decl = 4
    RULE_param_lst = 5
    RULE_param = 6
    RULE_statements = 7
    RULE_storedecl = 8
    RULE_constdecl = 9
    RULE_vardecl = 10
    RULE_non_inital_decl = 11
    RULE_inital_decl = 12
    RULE_assigndecl = 13
    RULE_assign = 14
    RULE_ifstmt = 15
    RULE_forstmt = 16
    RULE_continue_state = 17
    RULE_return_state = 18
    RULE_break_state = 19
    RULE_callstmt = 20
    RULE_instance_method_invo_access = 21
    RULE_static_method_invo_access = 22
    RULE_io_st = 23
    RULE_block = 24
    RULE_io_mt = 25
    RULE_lhs = 26
    RULE_arraycell = 27
    RULE_fieldaccess = 28
    RULE_idlst = 29
    RULE_iden = 30
    RULE_expr_lst = 31
    RULE_expr = 32
    RULE_expr1 = 33
    RULE_expr2 = 34
    RULE_expr3 = 35
    RULE_expr4 = 36
    RULE_expr5 = 37
    RULE_expr6 = 38
    RULE_expr7 = 39
    RULE_expr8 = 40
    RULE_expr9 = 41
    RULE_expr10 = 42
    RULE_expr11 = 43
    RULE_relational = 44
    RULE_relat_bool = 45
    RULE_relat_int_float = 46
    RULE_multiplying = 47
    RULE_adding = 48
    RULE_logical_bin = 49
    RULE_logical_not = 50
    RULE_typ = 51
    RULE_array_type = 52
    RULE_literal = 53
    RULE_bool_literal = 54
    RULE_array = 55

    ruleNames =  [ "program", "class_dcl", "class_body", "method_dcl", "constructor_decl", 
                   "param_lst", "param", "statements", "storedecl", "constdecl", 
                   "vardecl", "non_inital_decl", "inital_decl", "assigndecl", 
                   "assign", "ifstmt", "forstmt", "continue_state", "return_state", 
                   "break_state", "callstmt", "instance_method_invo_access", 
                   "static_method_invo_access", "io_st", "block", "io_mt", 
                   "lhs", "arraycell", "fieldaccess", "idlst", "iden", "expr_lst", 
                   "expr", "expr1", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "expr8", "expr9", "expr10", "expr11", 
                   "relational", "relat_bool", "relat_int_float", "multiplying", 
                   "adding", "logical_bin", "logical_not", "typ", "array_type", 
                   "literal", "bool_literal", "array" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    BLOCK_COMMENT=9
    LINE_COMMENT=10
    BREAK=11
    CONTINUE=12
    IF=13
    ELSE=14
    FOR=15
    TRUE=16
    FALSE=17
    INT=18
    FLOAT=19
    BOOL=20
    STRING=21
    RETURN=22
    NULL=23
    CLASS=24
    CONSTRUCTOR=25
    VAR=26
    SELF=27
    NEW=28
    VOID=29
    CONST=30
    FUNC=31
    NOT=32
    AND=33
    OR=34
    EQUAL=35
    NOT_EQUAL=36
    LESS=37
    GREATER=38
    LESS_EQUAL=39
    GREATER_EQUAL=40
    INITIAL=41
    ASSIGN=42
    PLUS=43
    MINUS=44
    MULTIPLY=45
    DIVIDE_I=46
    DIVIDE_I_L=47
    DIVIDE_F=48
    SUPER_CLASS=49
    STRING_CONCAT=50
    DOT=51
    COMMA=52
    SEMICOLON=53
    COLON=54
    RPAREN=55
    LPAREN=56
    LBRACK=57
    RBRACK=58
    LBRASE=59
    RBRASE=60
    AT_ID=61
    STRING_LITERAL=62
    ID=63
    FLOAT_LITERAL=64
    NON_ZERO_INT=65
    INT_LITERAL=66
    WS=67
    ERROR_CHAR=68
    UNCLOSE_STRING=69
    ILLEGAL_ESCAPE=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSlangParser.EOF, 0)

        def class_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Class_dclContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Class_dclContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CSlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 112
                self.class_dcl()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(CSlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_dclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CSlangParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.ID)
            else:
                return self.getToken(CSlangParser.ID, i)

        def LBRASE(self):
            return self.getToken(CSlangParser.LBRASE, 0)

        def RBRASE(self):
            return self.getToken(CSlangParser.RBRASE, 0)

        def SUPER_CLASS(self):
            return self.getToken(CSlangParser.SUPER_CLASS, 0)

        def class_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Class_bodyContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Class_bodyContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_class_dcl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_dcl" ):
                listener.enterClass_dcl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_dcl" ):
                listener.exitClass_dcl(self)




    def class_dcl(self):

        localctx = CSlangParser.Class_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_dcl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(CSlangParser.CLASS)
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 121
                self.match(CSlangParser.ID)
                self.state = 122
                self.match(CSlangParser.SUPER_CLASS)


            self.state = 125
            self.match(CSlangParser.ID)
            self.state = 126
            self.match(CSlangParser.LBRASE)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3288334336) != 0):
                self.state = 127
                self.class_body()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(CSlangParser.RBRASE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_dcl(self):
            return self.getTypedRuleContext(CSlangParser.Method_dclContext,0)


        def constructor_decl(self):
            return self.getTypedRuleContext(CSlangParser.Constructor_declContext,0)


        def storedecl(self):
            return self.getTypedRuleContext(CSlangParser.StoredeclContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_class_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_body" ):
                listener.enterClass_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_body" ):
                listener.exitClass_body(self)




    def class_body(self):

        localctx = CSlangParser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 135
                self.method_dcl()
                pass

            elif la_ == 2:
                self.state = 136
                self.constructor_decl()
                pass

            elif la_ == 3:
                self.state = 137
                self.storedecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_dclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CSlangParser.FUNC, 0)

        def LPAREN(self):
            return self.getToken(CSlangParser.LPAREN, 0)

        def param_lst(self):
            return self.getTypedRuleContext(CSlangParser.Param_lstContext,0)


        def RPAREN(self):
            return self.getToken(CSlangParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(CSlangParser.TypContext,0)


        def block(self):
            return self.getTypedRuleContext(CSlangParser.BlockContext,0)


        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def AT_ID(self):
            return self.getToken(CSlangParser.AT_ID, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_method_dcl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_dcl" ):
                listener.enterMethod_dcl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_dcl" ):
                listener.exitMethod_dcl(self)




    def method_dcl(self):

        localctx = CSlangParser.Method_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_method_dcl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(CSlangParser.FUNC)
            self.state = 141
            _la = self._input.LA(1)
            if not(_la==61 or _la==63):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 142
            self.match(CSlangParser.LPAREN)
            self.state = 143
            self.param_lst()
            self.state = 144
            self.match(CSlangParser.RPAREN)
            self.state = 145
            self.match(CSlangParser.COLON)
            self.state = 146
            self.typ()
            self.state = 147
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constructor_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CSlangParser.FUNC, 0)

        def CONSTRUCTOR(self):
            return self.getToken(CSlangParser.CONSTRUCTOR, 0)

        def LPAREN(self):
            return self.getToken(CSlangParser.LPAREN, 0)

        def param_lst(self):
            return self.getTypedRuleContext(CSlangParser.Param_lstContext,0)


        def RPAREN(self):
            return self.getToken(CSlangParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(CSlangParser.BlockContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_constructor_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructor_decl" ):
                listener.enterConstructor_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructor_decl" ):
                listener.exitConstructor_decl(self)




    def constructor_decl(self):

        localctx = CSlangParser.Constructor_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constructor_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(CSlangParser.FUNC)
            self.state = 150
            self.match(CSlangParser.CONSTRUCTOR)
            self.state = 151
            self.match(CSlangParser.LPAREN)
            self.state = 152
            self.param_lst()
            self.state = 153
            self.match(CSlangParser.RPAREN)
            self.state = 154
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.ParamContext)
            else:
                return self.getTypedRuleContext(CSlangParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.COMMA)
            else:
                return self.getToken(CSlangParser.COMMA, i)

        def getRuleIndex(self):
            return CSlangParser.RULE_param_lst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_lst" ):
                listener.enterParam_lst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_lst" ):
                listener.exitParam_lst(self)




    def param_lst(self):

        localctx = CSlangParser.Param_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_lst)
        self._la = 0 # Token type
        try:
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [61, 63]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.param()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==52:
                    self.state = 157
                    self.match(CSlangParser.COMMA)
                    self.state = 158
                    self.param()
                    self.state = 163
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [55]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def iden(self):
            return self.getTypedRuleContext(CSlangParser.IdenContext,0)


        def idlst(self):
            return self.getTypedRuleContext(CSlangParser.IdlstContext,0)


        def typ(self):
            return self.getTypedRuleContext(CSlangParser.TypContext,0)


        def array_type(self):
            return self.getTypedRuleContext(CSlangParser.Array_typeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = CSlangParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 167
                self.iden()
                pass

            elif la_ == 2:
                self.state = 168
                self.idlst()
                pass


            self.state = 171
            self.match(CSlangParser.COLON)
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18, 19, 20, 21, 29, 63]:
                self.state = 172
                self.typ()
                pass
            elif token in [57]:
                self.state = 173
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def storedecl(self):
            return self.getTypedRuleContext(CSlangParser.StoredeclContext,0)


        def assigndecl(self):
            return self.getTypedRuleContext(CSlangParser.AssigndeclContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(CSlangParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(CSlangParser.ForstmtContext,0)


        def break_state(self):
            return self.getTypedRuleContext(CSlangParser.Break_stateContext,0)


        def continue_state(self):
            return self.getTypedRuleContext(CSlangParser.Continue_stateContext,0)


        def return_state(self):
            return self.getTypedRuleContext(CSlangParser.Return_stateContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(CSlangParser.CallstmtContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = CSlangParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statements)
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.storedecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.assigndecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 178
                self.ifstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 179
                self.forstmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 180
                self.break_state()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 181
                self.continue_state()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 182
                self.return_state()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 183
                self.callstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StoredeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(CSlangParser.SEMICOLON, 0)

        def constdecl(self):
            return self.getTypedRuleContext(CSlangParser.ConstdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(CSlangParser.VardeclContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_storedecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStoredecl" ):
                listener.enterStoredecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStoredecl" ):
                listener.exitStoredecl(self)




    def storedecl(self):

        localctx = CSlangParser.StoredeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_storedecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.state = 186
                self.constdecl()
                pass
            elif token in [26]:
                self.state = 187
                self.vardecl()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 190
            self.match(CSlangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(CSlangParser.CONST, 0)

        def non_inital_decl(self):
            return self.getTypedRuleContext(CSlangParser.Non_inital_declContext,0)


        def inital_decl(self):
            return self.getTypedRuleContext(CSlangParser.Inital_declContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_constdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstdecl" ):
                listener.enterConstdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstdecl" ):
                listener.exitConstdecl(self)




    def constdecl(self):

        localctx = CSlangParser.ConstdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(CSlangParser.CONST)
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 193
                self.non_inital_decl()
                pass

            elif la_ == 2:
                self.state = 194
                self.inital_decl()
                pass

